--- a/styles/style.css
+++ b/styles/style.css
@@ -300,7 +300,7 @@ font-size: 1.1rem;
 .portfolio img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: cover; /* Tetap crop di tampilan awal */
 }
 
 .portfolio-info {
@@ -345,6 +345,7 @@ font-size: 1.1rem;
   padding: 0.4rem 1rem;
   color: var(--secondaryTextColor);
 }
+
 
 /* Skills and Education */
 #skills {
