--- a/styles/style.css
+++ b/styles/style.css
@@ -174,6 +174,7 @@ nav ul li a {
   width: 30px;
   height: 3px;
   background-color: #000;
+  border-radius: 10px;
   margin: 5px;
   transition: all 0.3s;
   z-index: 99;
@@ -243,6 +244,10 @@ nav ul li a {
   margin: 0 auto;
 }
 
+.services {
+  align-items: center;
+}
+
 .services-title {
   text-align: center;
 }
@@ -291,10 +296,14 @@ nav ul li a {
   border-radius: var(--itemBorderRadius);
   overflow: hidden; /* supaya gambar yang diatas itu dia ngikut border radiusnya, karena yang dikasih border radius disini adalah div portfolio ini */
   border: 1px solid var(--borderColor);
+  background-color: #fffdf8;
 }
 
 .portfolio img {
   width: 100%;
+  background-color: white;
+  /* height: 100%;
+  object-fit: cover; Tetap crop di tampilan awal */
 }
 
 .portfolio-info {
@@ -326,6 +335,10 @@ nav ul li a {
 .portfolio-tags img {
   width: 25%;
   height: 25%;
+}
+
+.portfolio-link img {
+  background-color: transparent;
 }
 
 .portfolio-tags div {
@@ -439,6 +452,7 @@ nav ul li a {
   width: 20%;
   padding: 0.75rem 1rem;
   background-color: var(--primaryIconColor);
+  text-align: center;
   color: #fff;
   border: none;
   border-radius: 3px;
